--- a/causal_effect.qmd
+++ b/causal_effect.qmd
@@ -43,3 +43,5 @@ ch10_data |>
       y = "Voted in 2006 Primary Election",
       caption = "Random sample of 5% of the data from Gerber, Green, and Larimer (2008)")
 ```
+
+Using a dataset of the primary elections in 2006 in Michigan from Gerber, Green, and Larimer (2008), we seek to find the causal effect of postcards on voting in the 2026 Texas election.
